# scenarios-hpc-azure

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.sh
src/scenarios_hpc_azure/: __init__.py  azure_utils.py  create_experiment  create_experiment.py  experiment_launcher_azure.py  launch_experiment  launch_experiment.py  utils.py
src/scenarios_hpc_azure/data/: create_regions_mapping_combined.py  fips_to_name.csv  regions_mapping_combined.csv  state_to_hhs_region.csv
src/scenarios_hpc_azure/shiny_visualizers/: azure_visualizer.py  init_visualizer.py  shiny_utils.py
tests/: test_utilities.py
