[tool.poetry]
name = "scenarios_hpc_azure"
version = "0.1.0"
description = "CFA Azure Acceleration library for creating, launching, and visualizing Azure experiments"
authors = ["Your Name <you@example.com>"]
license = "Apache License, Version 2.0, January 2004"

[tool.poetry.dependencies]
python = "^3.10"
cfa-azure = {git = "https://github.com/CDCgov/cfa_azure.git", rev="beedc791f06a130e0399c3405267503212d4df81"}
pandas = "^2.2.3"
shiny = "^1.1.0"
shinywidgets = "^0.3.3"
plotly = "^5.24.1"
scipy = "^1.14.1"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
tqdm = "^4.66.6"
pytest = "^8.3.3"

[tool.poetry.dev-dependencies]
#dynode = {path = "../DynODE", develop=true}
dynode = {git = "https://github.com/CDCgov/DynODE.git", branch="main"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
create_experiment = "scenarios_hpc_azure.create_experiment:create"
launch_experiment = "scenarios_hpc_azure.launch_experiment:launch"
